--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-* {}
+* {
+  margin: 0;
+  padding: 0;
+}
 
 h1,
 h2 {
   color: #222;
 }
+html{
+  height: 100%;
+  width: 100%;
+}
 
 .App {
   text-align: center;
-  margin: 50px 80px;
-}
-.App h1{
-  margin: 15px 0;
+  margin: 80px 80px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App .title {
+  text-align: center;
+  width: 100%;
+  width: 70%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App .title h1 {
+  margin: 30px 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App .title p {
+  margin: 30px 0;
+  display: block;
+  text-align: center;
 }
 
 .App-link {
