--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ html{
 .App .title {
   text-align: center;
   width: 100%;
-  width: 70%;
+  /* width: 70%; */
 }
 
 .App .title h1 {
@@ -33,6 +33,9 @@ html{
   text-align: center;
 }
 
+.grid{
+  display: grid;
+}
 .App-link {
   color: #61dafb;
 }
