--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,10 @@ h1,
 h2 {
   color: #222;
 }
-
+p{
+  
+  font-size: 15px;
+}
 html {
   height: 100%;
   width: 100%;
@@ -43,12 +46,21 @@ html {
 
 .grid .card {
   border: 1px solid #ddd;
-  padding: 20px 0;
+  padding: 30px 0;
 }
 
 .grid .card h2 {
+  margin: 15px 0;
+}
 
-  margin: 30px 0;
+.grid .card p {
+  margin: 15px 0;
+  font-size: 3em;
+}
+
+.grid .card .sub-label {
+  margin: 15px 0;
+  font-size: 15px;
 }
 
 .App-link {
