--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,29 @@ button {
   color: #fff;
 }
 
+.modal {
+  position: fixed;
+  z-index: 9;
+  background: #dddddd99;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.modal .modal-container {
+  width: 50%;
+  position: absolute;
+  margin: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal .container {
+  background: #fff;
+}
+
 @media only screen and (max-width:400px) {
   * {
     background: red;
